--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "tsc",
     "start": "node dist/main.js",
     "dev": "ts-node src/main.ts",
+    "dashboard": "ts-node src/dashboard/dashboard-server.ts",
+    "dashboard:dev": "nodemon --exec ts-node src/dashboard/dashboard-server.ts",
+    "dashboard:prod": "npm run build:dashboard && node dist/dashboard/dashboard-server.js",
+    "build:dashboard": "tsc --project tsconfig.dashboard.json",
     "test": "jest --config jest.config.js",
     "test:watch": "jest --watch --config jest.config.js",
     "test:coverage": "jest --coverage --config jest.config.js",
@@ -26,9 +30,11 @@
     "binance-api-node": "^0.12.3",
     "bull": "^4.11.4",
     "ccxt": "^4.0.77",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.8.1",
     "helmet": "^7.0.0",
     "ioredis": "^5.7.0",
     "joi": "^17.9.2",
@@ -45,6 +51,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.3",
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.14",
