--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^2.4.3",
     "binance-api-node": "^0.12.3",
     "bull": "^4.11.4",
+    "bybit-api": "^4.3.1",
     "ccxt": "^4.0.77",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
